--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@roxi/routify": "^3.0.0-next.82",
     "gsap": "^3.9.1",
     "three": "^0.136.0"
   }
