--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "type": "module",
   "dependencies": {
     "gsap": "^3.9.1",
+    "locomotive-scroll": "^4.1.4",
     "three": "^0.136.0"
   }
 }
